crop image and remove white bottom part

--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ span {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
+img {
+  object-fit: cover;
+  object-position: center;
+  height: 95px;
+  width: 100px;
+}
+
 /* dd */
 
 ul {
